--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
 
     <!-- *********************** Feature section ********************* -->
-    <section class="section-features" id="feature">
+    <!-- <section class="section-features" id="feature">
       <div class="row " >
         <h2>Get your Food fast &mdash; Not Fast food </h2>
         <p class="long-copy">
@@ -117,7 +117,49 @@
       </div>    
 
 
+    </section> -->
+
+    <section class="section-features" id="feature">
+      <div class="row">
+        <h2>Get your Food fast &mdash; Not Fast food </h2>
+        <p class="long-copy">
+          Hello, we're Doorstep foods, your new premium food delivery service. We know you are always busy.
+          No time for cooking. So let us take care of that, we're really good at your promises !!
+        </p>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-4 box">
+          <ion-icon class="icon-big" name="infinite-outline"></ion-icon>
+          <h3>Up to 365 days/yr </h3>
+          <p>Never cook again! We realy mean that. Our subscription plans include up to 365
+            days/year coverage. You can also choose to order more flexibly if that's your style. </p>
+        </div>
+        <div class="col span-1-of-4 box">
+          <ion-icon class="icon-big" name="stopwatch-outline"></ion-icon>
+          <h3>Ready in 20 minutes</h3>
+          <p>You're only twenty-minutes away from your healthy and delicious meal devlivered
+            right to your door. We work with the best chefs in each town to ensure that your're 100% happy. </p>
+        </div>
+        <div class="row">
+          <div class="col span-1-of-4 box">
+            <ion-icon class="icon-big" name="fast-food-outline"></ion-icon>
+            <h3>It's 100% Organic </h3>
+            <p>All our vegie's are fresh, organic and local.Animals are raised without added
+              hormones or antibiotics. Good for your health, the environment, and it also tastes better! </p>
+          </div>
+          <div class="col span-1-of-4 box">
+            <ion-icon class="icon-big" name="cart-outline"></ion-icon>
+            <h3>Order anything</h3>
+            <p>We don't limit your creativity, which means you can order what you feel like. You
+              can also choose from our menu containing upto 100 delicious meals.It's up to you !
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
+
+
+
     <!-- End of feature section -->
 
     <!--  -->
